--- a/src/views/components/header.ejs
+++ b/src/views/components/header.ejs
@@ -15,14 +15,11 @@
                   Categorias
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown" style="background-color: rgb(75, 33, 192);">
-                  <li><a class="dropdown-item" href="#">Bicicleta</a></li>
-                  <li><a class="dropdown-item" href="#">Capacete</a></li>
-                  <li><a class="dropdown-item" href="#">Luva</a></li>
-                  <li><a class="dropdown-item" href="#">Sapatilha</a></li>
-                  <li><a class="dropdown-item" href="#">Roupa</a></li>
-                  <li><a class="dropdown-item" href="#">Iluminação</a></li>
-                  <li><a class="dropdown-item" href="#">GPS</a></li>
-                  <li><a class="dropdown-item" href="#">Peças</a></li>
+                  <li><a class="dropdown-item" href="/?filter=Bicicleta">Bicicleta</a></li>
+                  <li><a class="dropdown-item" href="/?filter=EPI">EPI</a></li>
+                  <li><a class="dropdown-item" href="/?filter=Iluminação">Iluminação</a></li>
+                  <li><a class="dropdown-item" href="/?filter=GPS">GPS</a></li>
+                  <li><a class="dropdown-item" href="/?filter=Peças">Peças</a></li>
                 </ul>
               </li>
               <li class="nav-item">
