--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -60,298 +60,19 @@
     <!-- other cards -->
 
     <!-- product cards -->
+
+    <!-- product cards -->
     <div class="container" id="product-cards">
       <h1 class="text-center">PRODUTOS</h1>
       <div class="row" style="margin-top: 30px;">
-        <div class="col-md-3 py-3 py-md-0">
-          <div class="card">
-            <img src="./images/bike1.jpg" alt="">
-            <div class="card-body">
-              <h3 class="text-center">Bicicleta</h3>
-              <p class="text-center">Descrição...</p>
-              <div class="star text-center">
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-              </div>
-              <h2>R$1000 <span></span></h2>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3 py-3 py-md-0">
-          <div class="card">
-            <img src="./images/bike2.jpg" alt="">
-            <div class="card-body">
-              <h3 class="text-center">Bicicleta</h3>
-              <p class="text-center">Descrição...</p>
-              <div class="star text-center">
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-              </div>
-              <h2>R$1000 <span></span></h2>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3 py-3 py-md-0">
-          <div class="card">
-            <img src="./images/gps5.jpeg" alt="">
-            <div class="card-body">
-              <h3 class="text-center">GPS</h3>
-              <p class="text-center">Descrição...</p>
-              <div class="star text-center">
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-              </div>
-              <h2>R$200 <span></span></h2>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3 py-3 py-md-0">
-          <div class="card">
-            <img src="./images/capacete1.jpg" alt="">
-            <div class="card-body">
-              <h3 class="text-center">Capacete</h3>
-              <p class="text-center">Descrição...</p>
-              <div class="star text-center">
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-              </div>
-              <h2>R$300 <span></span></h2>
-            </div>
-          </div>
-        </div>
-      </div>
 
-      <div class="row" style="margin-top: 30px;">
-        <div class="col-md-3 py-3 py-md-0">
-          <div class="card">
-            <img src="./images/sapatilha1.jpg" alt="">
-            <div class="card-body">
-              <h3 class="text-center">Sapatilha</h3>
-              <p class="text-center">Descrição...</p>
-              <div class="star text-center">
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-              </div>
-              <h2>R$50 <span></span></h2>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3 py-3 py-md-0">
-          <div class="card">
-            <img src="./images/iluminacao2.jpg" alt="">
-            <div class="card-body">
-              <h3 class="text-center">Iluminação</h3>
-              <p class="text-center">Descrição...</p>
-              <div class="star text-center">
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-              </div>
-              <h2>R$50 <span></span></h2>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3 py-3 py-md-0">
-          <div class="card">
-            <img src="./images/bike3.jpg" alt="">
-            <div class="card-body">
-              <h3 class="text-center">Bicicleta</h3>
-              <p class="text-center">Descrição...</p>
-              <div class="star text-center">
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-              </div>
-              <h2>R$1200 <span></span></h2>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3 py-3 py-md-0">
-          <div class="card">
-            <img src="./images/roupa1.jpg" alt="">
-            <div class="card-body">
-              <h3 class="text-center">Roupa para ciclismo</h3>
-              <p class="text-center">Descrição...</p>
-              <div class="star text-center">
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-              </div>
-              <h2>R$600 <span></span></h2>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    <!-- product cards -->
+      <%- include('components/list_produtos') %>
 
-
-    <!-- product cards -->
-    <div class="container" id="product-cards">
-      <div class="row" style="margin-top: 30px;">
-        <div class="col-md-3 py-3 py-md-0">
-          <div class="card">
-            <img src="./images/bike1.jpg" alt="">
-            <div class="card-body">
-              <h3 class="text-center">Bicicleta</h3>
-              <p class="text-center">Descrição...</p>
-              <div class="star text-center">
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-              </div>
-              <h2>R$1000 <span></span></h2>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3 py-3 py-md-0">
-          <div class="card">
-            <img src="./images/bike2.jpg" alt="">
-            <div class="card-body">
-              <h3 class="text-center">Bicicleta</h3>
-              <p class="text-center">Descrição...</p>
-              <div class="star text-center">
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-              </div>
-              <h2>R$1000 <span></span></h2>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3 py-3 py-md-0">
-          <div class="card">
-            <img src="./images/gps5.jpeg" alt="">
-            <div class="card-body">
-              <h3 class="text-center">GPS</h3>
-              <p class="text-center">Descrição...</p>
-              <div class="star text-center">
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-              </div>
-              <h2>R$200 <span></span></h2>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3 py-3 py-md-0">
-          <div class="card">
-            <img src="./images/capacete1.jpg" alt="">
-            <div class="card-body">
-              <h3 class="text-center">Capacete</h3>
-              <p class="text-center">Descrição...</p>
-              <div class="star text-center">
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-              </div>
-              <h2>R$300 <span></span></h2>
-            </div>
-          </div>
-        </div>
-      </div>
-
-      <div class="row" style="margin-top: 30px;">
-        <div class="col-md-3 py-3 py-md-0">
-          <div class="card">
-            <img src="./images/sapatilha1.jpg" alt="">
-            <div class="card-body">
-              <h3 class="text-center">Sapatilha</h3>
-              <p class="text-center">Descrição...</p>
-              <div class="star text-center">
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-              </div>
-              <h2>R$50 <span></span></h2>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3 py-3 py-md-0">
-          <div class="card">
-            <img src="./images/iluminacao2.jpg" alt="">
-            <div class="card-body">
-              <h3 class="text-center">Iluminação</h3>
-              <p class="text-center">Descrição...</p>
-              <div class="star text-center">
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-              </div>
-              <h2>R$50 <span></span></h2>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3 py-3 py-md-0">
-          <div class="card">
-            <img src="./images/bike3.jpg" alt="">
-            <div class="card-body">
-              <h3 class="text-center">Bicicleta</h3>
-              <p class="text-center">Descrição...</p>
-              <div class="star text-center">
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-              </div>
-              <h2>R$1200 <span></span></h2>
-            </div>
-          </div>
-        </div>
-        <div class="col-md-3 py-3 py-md-0">
-          <div class="card">
-            <img src="./images/roupa1.jpg" alt="">
-            <div class="card-body">
-              <h3 class="text-center">Roupa para ciclismo</h3>
-              <p class="text-center">Descrição...</p>
-              <div class="star text-center">
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-                <i class="fa-solid fa-star checked"></i>
-              </div>
-              <h2>R$600 <span></span></h2>
-            </div>
-          </div>
-        </div>
       </div>
     </div>
 
+    
+    <!-- product cards -->
 
       <!-- newslater -->
       <div class="container" id="newslater" style="margin-top: 100px;">
