--- a/src/views/more.ejs
+++ b/src/views/more.ejs
@@ -18,15 +18,15 @@
         <div class="row" style="margin-top: 50px;" id="imagem">
             <div class="col-md-8 py-4 py-md-0">
                 <div class="card">
-                    <img class="fotoItem" src="https://api-centraldosom.onrender.com/imagens/<%= imagem%>" alt="">
+                    <img class="fotoItem" src="https://api-all-for-cycling.onrender.com/imagens/<%= imagem%>" alt="">
                 </div>
             </div>
            
             <div class="col-md-4 py-3 py-md-0" id="infos">
                 <div class="Nome-item"><h2><%=nome%></h2></div>
-                <p><span >Valor R$<span style="color: white"><%=valor%></span></span>
-                <p><span >Estado:<span style="color:white;"><%=tipo%></span></span></p>
-                <span >Categoria:<span style="color:white;"><%=categoria%></span></span></p>
+                <p><span >Valor R$<span style="color: rgb(0, 0, 0)"><%=valor%></span></span>
+                <p><span >Estado:<span style="color:rgb(0, 0, 0);"><%=tipo%></span></span></p>
+                <span >Categoria:<span style="color:rgb(8, 8, 8);"><%=categoria%></span></span></p>
                 <div class="desc-content">
                      <div class="descricao">Descricao</div>
                      
