--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,52 +17,36 @@
     <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
     <!-- fonts links -->
 </head>
+
 <body>
 
   <%- include('components/header') %>
 
     
    <div class="container" id="login">
-    <div class="row">
-        <div class="col-md-5 py-3 py-md-0" id="side1">
-            <h3 class="text-center">Bem vindo!</h3>
-        </div>
-        <div class="col-md-7 py-3 py-md-0" id="side2">
-            <h3 class="text-center">Login</h3>
-            <p class="text-center">Informa suas credenciais para realizar login.</p>
-            <div class="input2 text-center">
-            <input type="name" placeholder="Nome de Usuario ou E-mail">
-            <input type="password" placeholder="Senha">
+        <div class="row">
+            <div class="col-md-5 py-3 py-md-0" id="side1">
+                <h3 class="text-center">Bem vindo!</h3>
             </div>
-            <p class="text-center" id="btnlogin"><a href="#">LOG IN</a></p>
-            <p class="text-center">Esqueceu sua senha. <a href="#">Redefinir</a></p>
-        </div>
+            <div class="col-md-7 py-3 py-md-0" id="side2">
+                <h3 class="text-center">Login</h3>
+                <p class="text-center">Informa suas credenciais para realizar login.</p>
+                <div class="input2 text-center">
+                <input type="name" placeholder="Nome de Usuario ou E-mail">
+                <input type="password" placeholder="Senha">
+                </div>
+                <p class="text-center" id="btnlogin"><a href="#">LOG IN</a></p>
+                <p class="text-center">Esqueceu sua senha. <a href="#">Redefinir</a></p>
+            </div>
 
-    </div>
+        </div>
    </div>
 
-
-
-
-
-
-  <%- include('components/footer') %>
+    <%- include('components/footer') %>
 
     <a href="#" class="arrow"><i><img src="./images/arrow.png" alt=""></i></a>
 
-
-
-
-
-
-
-
-
-
-
-
-
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
-
+    <script src="./scripts/scrpLogin.js"></script>
 </body>
 </html>
