--- a/src/views/style.css
+++ b/src/views/style.css
@@ -221,6 +221,13 @@
     width: 330px!important;
     height: 330px!important;
 }
+
+#prod-img {
+    width: 300px;
+    height: 300px;
+
+}
+
 #product-cards{
     margin-top: 100px;
 }
