--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -20,6 +20,8 @@
 
   <%- include('components/header') %>
     
+  <% if(meio){ %>
+    
     <!-- home content -->
     <section class="home">
     <div class="content">
@@ -58,8 +60,8 @@
       </div>
     </div>
     <!-- other cards -->
-
-    <!-- product cards -->
+  <% } %>
+  
 
     <!-- product cards -->
     <div class="container" id="product-cards">
