--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -36,7 +36,10 @@
                 <input type="password" placeholder="Senha">
                 </div>
                 <p class="text-center" id="btnlogin"><a href="#">LOG IN</a></p>
-                <p class="text-center">Esqueceu sua senha. <a href="#">Redefinir</a></p>
+
+                <p class="text-center"> Não possui conta - <a href="\CadUser">Cadastre-se</a></p>
+
+                <p class="text-center">Esqueceu sua senha ? <a href="#">Redefinir</a></p>
             </div>
 
         </div>
