--- a/src/views/cad_user.ejs
+++ b/src/views/cad_user.ejs
@@ -27,14 +27,29 @@
         </div>
         <div class="col-md-7 py-3 py-md-0" id="side2">
             <h3 class="text-center">Criar uma conta</h3>
+
             <div class="input2 text-center">
-            <input type="name" placeholder="Nome">
-            <input type="name" placeholder="Nome de Usuario">
-            <input type="number" placeholder="Telefone">
-            <input type="email" placeholder="Email">
-            <input type="password" placeholder="Password">
+            <input class="inputs required" type="text" oninput="nameValidate()" id="nome" placeholder="Nome">
+            <span class="span-required">Nome deve ter no mínimo 5 caracteres</span>
+
+            <input class="inputs required" type="number" oninput="telValidate()" id="telefone" placeholder="Telefone">
+            <span class="span-required">Informe um telefone valido</span>
+
+            <input class="inputs required" type="text" oninput="emailValidate()" id="email" placeholder="Email">
+            <span class="span-required">Informe um email valido</span>
+
+            <input class="inputs required" type="text" oninput="cidadeValidate()" id="cidade" placeholder="Cidade">
+            <span class="span-required">Informe uma cidade valida</span>
+
+            <input class="inputs required" type="text" oninput="estadoValidate()" id="estado" placeholder="Estado-UF">
+            <span class="span-required">Informe um estado valido</span>
+
+            <input class="inputs required" type="password" oninput="mainPasswValidate()" id="senha" placeholder="Password">
+            <span class="span-required">A senha deve conter pelo menos 5 caracteres</span>
+
             </div>
-            <p class="text-center" id="btnlogin"><a href="#">Cadastre-se</a></p>
+            <p class="text-center" id="btnlogin"><a href="#" onclick="cadastrar()">Cadastre-se</a></p>
+            <span class="span-required">ERRO ao Criar o Usuário!</span>
         </div>
 
     </div>
@@ -58,6 +73,8 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+    <script src="./scripts/scrpValCadUser.js"></script>
 
 </body>
 </html>
