--- a/src/views/style.css
+++ b/src/views/style.css
@@ -211,7 +211,13 @@
 
 
 
-
+.span-required{
+    font-size: 12px;
+    margin: 3px 0 0 1px;
+    color: #e63636;
+    display: none;
+    position: center;
+}
 
 
 
