--- a/src/views/components/header.ejs
+++ b/src/views/components/header.ejs
@@ -29,7 +29,7 @@
                 <a class="nav-link" href="\Contato">Contato</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="\Login">Login</a>
+                <a  class="nav-link" href="\Login">Login</a>
               </li>
             </ul>
             <form class="d-flex" id="search">
@@ -43,6 +43,7 @@
 
 <script>
   // seleciona o formulário e o botão de envio
+const login = document.getElementById("login");
 const form = document.getElementById("search");
 const button = document.getElementById("searchButton");
 
