--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -31,6 +31,9 @@
             <div class="col-md-7 py-3 py-md-0" id="side2">
                 <h3 class="text-center">Login</h3>
                 <p class="text-center">Informa suas credenciais para realizar login.</p>
+
+                <p class="text-center"><span class="span-required">Usuário ou senha incorretos!</span></p>
+
                 <div class="input2 text-center">
                 <input type="name" placeholder="Nome de Usuario ou E-mail">
                 <input type="password" placeholder="Senha">
