--- a/src/views/meus_produtos.ejs
+++ b/src/views/meus_produtos.ejs
@@ -18,10 +18,10 @@
 </head>
 <body>
 
-  <!-- <%- include('components/header') %> -->
+  <%- include('components/header') %>
   
     
-      <!-- product cards -->
+  <!-- product cards -->
     <div class="container" id="product-cards">
         <h1 class="text-center">SEUS PRODUTOS</h1>
         <div class="row" style="margin-top: 30px;">
