--- a/src/views/components/header.ejs
+++ b/src/views/components/header.ejs
@@ -37,6 +37,7 @@
                   Perfil
                 </a>
                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown" style="background-color: rgb(75, 33, 192);">
+                  <li><a  class="dropdown-item" href="/cadItem">Cadastrar Produto</a></li>
                   <li><a  class="dropdown-item" href="/produtos">Meus Produtos</a></li>
                   <li><a id = "sair" class="dropdown-item" href="#">Sair</a></li>
                 </ul>
