--- a/src/views/meus_produtos.ejs
+++ b/src/views/meus_produtos.ejs
@@ -1,73 +1,36 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All for cycling</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
-    <!-- bootstrap links -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    <!-- bootstrap links -->
-    <!-- fonts links -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
-    <!-- fonts links -->
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>All for cycling</title>
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.2.0/css/all.min.css">
+  <!-- bootstrap links -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
+  <!-- bootstrap links -->
+  <!-- fonts links -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Merriweather&display=swap" rel="stylesheet">
+  <!-- fonts links -->
 </head>
 <body>
 
   <%- include('components/header') %>
-  
-    
+
+
   <!-- product cards -->
-    <div class="container" id="product-cards">
-        <h1 class="text-center">SEUS PRODUTOS</h1>
-        <div class="row" style="margin-top: 30px;">
-          <div class="col-md-3 py-3 py-md-0">
-            <div class="card">
-              <img src="./images/bike1.jpg" alt="">
-              <div class="card-body">
-                <h3 class="text-center">Bicicleta</h3>
-                <p class="text-center">Descrição...</p>
-                <h2>R$1000 <span><i class="fa-solid fa-pen-to-square"><i class="fa-solid fa-trash"></i></i></span></h2>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 py-3 py-md-0">
-            <div class="card">
-              <img src="./images/bike2.jpg" alt="">
-              <div class="card-body">
-                <h3 class="text-center">Bicicleta</h3>
-                <p class="text-center">Descrição...</p>
-                <h2>R$1000 <span><i class="fa-solid fa-pen-to-square"></i><i class="fa-solid fa-trash"></i></span></h2>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 py-3 py-md-0">
-            <div class="card">
-              <img src="./images/gps5.jpeg" alt="">
-              <div class="card-body">
-                <h3 class="text-center">GPS</h3>
-                <p class="text-center">Descrição...</p>
-                <h2>R$200 <span><i class="fa-solid fa-pen-to-square"></i><i class="fa-solid fa-trash"></i></span></h2>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 py-3 py-md-0">
-            <div class="card">
-              <img src="./images/capacete1.jpg" alt="">
-              <div class="card-body">
-                <h3 class="text-center">Capacete</h3>
-                <p class="text-center">Descrição...</p>
-                <h2>R$300 <span><i class="fa-solid fa-pen-to-square"></i><i class="fa-solid fa-trash"></i></span></h2>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-      <!-- product cards -->
+  <div class="container" id="product-cards">
+    <h1 class="text-center">SEUS PRODUTOS</h1>
+    <div class="row" id="itens" style="margin-top: 30px;">
+
+    
+
+    </div>
+  </div>
+  <!-- product cards -->
 
 
     
@@ -84,6 +47,7 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script src="./scripts/scrpMeusProd.js"></script>
 
 </body>
 </html>
