--- a/src/views/login.ejs
+++ b/src/views/login.ejs
@@ -42,7 +42,7 @@
 
                 <p class="text-center"> Não possui conta - <a href="\CadUser">Cadastre-se</a></p>
 
-                <p class="text-center">Esqueceu sua senha ? <a href="#">Redefinir</a></p>
+                <!-- <p class="text-center">Esqueceu sua senha ? <a href="#">Redefinir</a></p> -->
             </div>
 
         </div>
