--- a/src/views/components/produto.ejs
+++ b/src/views/components/produto.ejs
@@ -1,7 +1,7 @@
 
 
   <div class="col-md-3 py-3 py-md-0">
-        <div class="card">
+        <div class="card" style="margin-top: 30px;">
           <a href="/More?imagem=<%= imagem %>&nome=<%= nome %>&valor=<%= valor %>&categoria=<%= categoria %>&tipo=<%= tipo %>&descricao=<%= descricao %>&anunciante=<%= anunciante %>&telefone=<%= telefone %>&cidade=<%= cidade %>&UF=<%= UF %>">
             <img id = "prod-img" src="https://api-all-for-cycling.onrender.com/imagens/<%= imagem%>" alt=""></a>
             <div class="card-body">
