--- a/src/views/components/footer.ejs
+++ b/src/views/components/footer.ejs
@@ -18,9 +18,9 @@
               <div class="col-lg-3 col-md-6 footer-links">
                 <h4>Usefull Links</h4>
                <ul>
-                <li><a href="\home">Home</a></li>
-                <li><a href="\sobre">Sobre</a></li>
-                <li><a href="\contato">Contato</a></li>
+                <li><a href="\">Home</a></li>
+                <li><a href="\Sobre">Sobre</a></li>
+                <li><a href="\Contato">Contato</a></li>
                 <li><a href="#">Termos de serviço</a></li>
                 <li><a href="#">Política de Privacidade</a></li>
                </ul>
