--- a/src/views/contato.ejs
+++ b/src/views/contato.ejs
@@ -43,18 +43,18 @@
         </div>
         <div class="row" style="margin-top: 30px;">
             <div class="col-md-4 py-3 py-md-0">
-                <input type="text" class="form-control form-control" placeholder="Nome">
+                <input type="text" class="form-control form-control required" placeholder="Nome">
             </div>
             <div class="col-md-4 py-3 py-md-0">
-                <input type="text" class="form-control form-control" placeholder="Email">
+                <input type="text" class="form-control form-control required" placeholder="Email">
             </div>
-            <div class="col-md-4 py-3 py-md-0">
+            <!-- <div class="col-md-4 py-3 py-md-0">
                 <input type="text" class="form-control form-control" placeholder="Telefone">
-            </div>
+            </div> -->
             <div class="form-group" style="margin-top: 30px;">
-                <textarea class="form-control" id="" rows="5" placeholder="Mensagem"></textarea>
+                <textarea class="form-control required" id="" rows="5" placeholder="Mensagem"></textarea>
             </div>
-            <div class="messagebtn text-center"><button>Enviar</button></div>
+            <div type="submit" class="messagebtn text-center"><button onclick="comentario()">Enviar</button></div>
         </div>
     </div>
 
@@ -85,6 +85,46 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+
+    <script>
+        const campos = document.querySelectorAll('.required');
+        const spans = document.querySelectorAll('.span-required');
+        let message = "";
+        let type = "";
+
+        function comentario(){
+        // se todos os dados estiverem corretos
+            // dados a serem enviados
+            const dados = {
+            name: campos[0].value,
+            email: campos[1].value,
+            content_msg: campos[2].value,
+            };
+            console.log(dados);
+            fetch('https://api-all-for-cycling.onrender.com/msg', {
+            method: 'POST',
+            headers: {
+                'Content-Type': 'application/json'
+            },
+            body: JSON.stringify(dados)
+            })
+            .then(res => {
+            if (res.status === 201) {
+                message = ("Messagem enviada com Sucesso!");
+                type = "success";
+                console.log(message);
+                window.location.href = '/contato';
+            } else if (res.status === 400 || 500) {
+                message = ("ERRO ao enviar a Messagem!");
+                type = "danger"
+                console.log(message);
+                spans[0].style.display = 'block';
+                //window.location.href = '/CadUser';
+            }
+            })
+        }
+        ;
+    </script>
 
 </body>
 </html>
