--- a/src/views/home.ejs
+++ b/src/views/home.ejs
@@ -75,13 +75,13 @@
     <!-- product cards -->
 
       <!-- newslater -->
-      <div class="container" id="newslater" style="margin-top: 100px;">
+      <!--<div class="container" id="newslater" style="margin-top: 100px;">
         <h3 class="text-center">Inscreva-se para receber notificações.</h3>
         <div class="input text-center">
           <input type="text" placeholder="Enter Your Email..">
           <button id="subscribe">SE INSCREVER</button>
         </div>
-      </div>
+      </div>-->
       <!-- newslater -->
 
     <%- include('components/footer') %>
